Fixed spacing again and added tooltips to social links

--- a/default.css
+++ b/default.css
@@ -378,7 +378,7 @@ h6 {
 }
 
 .post-info-container {
-  height: 150px;
+  height: 170px;
   padding: 20px;
   display: flex;
   flex-direction: column;
